SimpleComplex/Validate 1.x, 2018-05-27
--------------------------------------
- Date/Datetime rules have to be named using strict acronym camelCasing because
  native \DateTime does (setISODate()).
- NB: next release must be new major version.

SimpleComplex/Validate 1.x, 2018-05-25
--------------------------------------
- Datetime ISO-8601 rules with timezone vs. UTC (Z), and Datetime ISO-8601 local.

SimpleComplex/Validate 1.x, 2018-05-21
--------------------------------------
- Prepare for tests.

SimpleComplex/Validate 1.x, 2018-04-07
--------------------------------------
- Release 1.0.1.

SimpleComplex/Validate 1.x, 2018-03-26
--------------------------------------
- empty() shan't check for ArrayObject|ArrayIterator upon checkíng for Countable
  because they are both Countable.

SimpleComplex/Validate 1.x, 2017-09-24
--------------------------------------
- Release 1.0.

SimpleComplex/Validate 1.x, 2017-09-17
--------------------------------------
- Don't cast filter_var() to boolean when filtering (not validating); doh.

SimpleComplex/Validate 1.x, 2017-09-02
--------------------------------------
- Interfaces moved to sub dir/namespace.

SimpleComplex/Validate 1.x, 2017-08-31
--------------------------------------
- challengeRecording: record invalid value when scalar.

SimpleComplex/Validate 1.x, 2017-08-22
--------------------------------------
- Validate constructor do not have to populate non-rule methods instance var.
- Validate getInstance() must be class aware.

SimpleComplex/Validate 1.x, 2017-08-22
--------------------------------------
- Validate recording do (at least) log failing subject's type.
- Validate->numeric() didn't accept leading hyphen, and (not really a bug)
  simple emptyness checks relied on ctype_digit().

SimpleComplex/Validate 1.x, 2017-08-20
--------------------------------------
- ValidationRuleSet constructor shan't have any required parameters,
  to allow Utils::cast()'ing to it.

SimpleComplex/Validate 1.x, 2017-08-10